# clove

./: .gitattributes  .gitignore  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  build_android.sh  build_linux.sh  build_osx.sh  build_web.sh  commit.sh
android/: info.txt
android/clovelib/: .project  AndroidManifest.xml
android/clovelib/jni/: Android.mk  clove.c
android/clovelib/res/values/: strings.xml
android/clovelib/src/com/android/clove/: CloveJNILib.java  CloveMain.java  CloveView.java
licenses/: FH  Freetype2
native/: README.md  game.c  game.h
opt/examples/aria/: collision.lsp  spritebatch.lisp  spritebatch.lsp
opt/examples/fh/: draw.fh  font.fh  geometry.fh
opt/examples/fh/batch/: main.fh
opt/examples/fh/draw_image/: draw.fh
opt/examples/fh/font/: main.fh
opt/examples/fh/mesh/: main.fh
opt/examples/fh/playground/: main.fh
opt/examples/fh/shaders/: main.fh
opt/examples/fh/ui/: main.fh
opt/examples/lua/: 3d simple example.lua  all_input_func_example.lua  boot.lua  conf.lua  demo_rectangle.lua  example2.lua  filesystem_example.lua  imageFont.lua  joystick_demo.lua  main.lua  mesh.lua  model_viewer.lua  net.lua  physics_demo.lua  spritebatch_example.lua  testThread.lua  thread_main.lua
opt/examples/lua/package/: README.md  game.clove.tar  main.lua  test.lua  test2.lua
opt/examples/rii/: main.rii
src/: aria_mainactivity.c  aria_mainactivity.h  fh_mainactivity.c  joystick.c  joystick.h  keyboard.c  keyboard.h  love.c  love.h  love_config.h  lua_mainactivity.c  lua_mainactivity.h  main.c  main.cpp  mouse.c  mouse.h  system.c  system.h
src/ariaapi/: audio.c  audio.h  event.c  event.h  filesystem.c  filesystem.h  graphics.c  graphics.h  graphics_bitmapfont.c  graphics_bitmapfont.h  graphics_font.c  graphics_font.h  graphics_geometry.c  graphics_geometry.h  graphics_image.c  graphics_image.h  graphics_mesh.c  graphics_mesh.h  graphics_quad.c  graphics_quad.h  graphics_shader.c  graphics_shader.h  graphics_spritebatch.c  graphics_spritebatch.h  graphics_window.c  graphics_window.h  input.c  input.h  math.c  math.h  system.c  system.h  time.c  time.h
src/audio/: audio.c  source.c  source.h  staticsource.c  staticsource.h  streamsource.c  streamsource.h  vorbis_decoder.c  vorbis_decoder.h  wav_decoder.c  wav_decoder.h
src/fhapi/: audio.c  audio.h  event.c  event.h  filesystem.c  filesystem.h  graphics.c  graphics.h  graphics_batch.c  graphics_batch.h  graphics_bitmapfont.c  graphics_bitmapfont.h  graphics_font.c  graphics_font.h  graphics_geometry.c  graphics_geometry.h  graphics_mesh.c  graphics_mesh.h  graphics_particlesystem.c  graphics_particlesystem.h  graphics_quad.c  graphics_quad.h  graphics_shader.c  graphics_shader.h  graphics_window.c  graphics_window.h  image.c  image.h  joystick.c  joystick.h  keyboard.c  keyboard.h  love.c  love.h  math.c  math.h  mouse.c  mouse.h  timer.c  timer.h  (+4 more)
src/filesystem/: filesystem.c
src/graphics/: batch.c  batch.h  bitmap_font.c  bitmap_font.h  font.c  geometry.c  gltools.c  gltools.h  graphics.c  graphics.h  image.c  image.h  list_shaders.h  matrixstack.c  matrixstack.h  mesh.c  mesh.h  particlesystem.c  quad.c  quad.h  shader.c  shader.h  vera_ttf.c  vertex.h
src/image/: imagedata.c  imagedata.h
src/include/: audio.h  batch.h  bitmap_font.h  fh_mainactivity.h  filesystem.h  font.h  geometry.h  gl.h  gltools.h  graphics.h  image.h  imagedata.h  joystick.h  keyboard.h  lerp.h  list_shaders.h  love.h  love_config.h  lua_mainactivity.h  matrixstack.h  mesh.h  minmax.h  mouse.h  net.h  particlesystem.h  quad.h  random.h  randomgenerator.h  shader.h  source.h  staticsource.h  stb_vorbis.c  streamsource.h  system.h  thread.h  timer.h  ui.h  utf8.h  util.h  utils.h  (+4 more)
src/luaapi/: audio.c  audio.h  boot.c  boot.h  errorhandler.c  errorhandler.h  event.c  event.h  filesystem.c  filesystem.h  graphics.c  graphics.h  graphics_batch.c  graphics_batch.h  graphics_bitmapfont.c  graphics_bitmapfont.h  graphics_font.c  graphics_font.h  graphics_geometry.c  graphics_geometry.h  graphics_image.c  graphics_image.h  graphics_mesh.c  graphics_mesh.h  graphics_quad.c  graphics_quad.h  graphics_shader.c  graphics_shader.h  graphics_window.c  graphics_window.h  image.c  image.h  joystick.c  joystick.h  keyboard.c  keyboard.h  love.c  love.h  math.c  math.h  (+12 more)
src/math/: lerp.c  minmax.c  random.c  random.h  randomgenerator.c  util.h  vector.c  vector.h
src/net/: net.c
src/timer/: timer.c  timer.h
src/tools/: gl.h  utf8.c  utils.c  utils.h
src/ui/: atlas.inl  ui.c
